--- a/Binance-Volume/index.html
+++ b/Binance-Volume/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Binance成交量</title>
+    <title>Binance Volume</title>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <style>
